--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
