--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "packageManager": "npm@10.9.2",
-  "overrides": {
-    "react": "$react",
-    "react-dom": "$react-dom"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@sanity/image-url": "^1.1.0",
@@ -24,6 +20,7 @@
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
     "lucide-react": "^0.525.0",
+    "markdown-it": "^14.1.0",
     "next": "^15.4.2-canary.1",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^9.12.3",
