--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   },
   "packageManager": "npm@10.9.2",
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.99.0",
+    "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
     "lucide-react": "^0.525.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.4.2-canary.1",
+    "next": "^15.0.0",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^9.12.3",
     "react": "^19.0.0",
@@ -29,6 +32,7 @@
     "sanity": "^3.99.0",
     "sanity-plugin-markdown": "^5.1.2",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
